Replaced singleton with Set.of() in Model.java